# day_ahead_prices

./: .gitignore  README.md  id-tables-design.drawio  project-overview.md  pyproject.toml
clients/enex/: client.py
clients/enex/endpoints/: day_ahead.py
clients/entsoe/: client.py  config.py
clients/entsoe/endpoints/: day_ahead.py
clients/epex/: client.py
clients/epex/endpoints/: day_ahead.py
clients/nordpool/: client.py  config.py
clients/nordpool/endpoints/: day_ahead.py  day_ahead_gb.py
clients/okte/: client.py
clients/okte/endpoints/: day_ahead.py
clients/omie/: client.py
clients/omie/endpoints/: day_ahead.py
clients/opcom/: client.py
clients/opcom/endpoints/: day_ahead.py
clients/ote/: client.py
clients/ote/endpoints/: day_ahead.py
clients/semo/: client.py
clients/semo/endpoints/: day_ahead.py
core/: __init__.py  dev_paths.py  logging.py  price_store.py  streaming.py
core/certs/: ca-cert.pem
db/migrations/: 0001_create_prices.sql
monitoring/: coverage.py  day_ahead_completeness.py
monitoring/zone_map/: app.py  build_geo.py  zones.py
monitoring/zone_map/static/: app.js  index.html  style.css
monitoring/zone_map/static/geo/: context.geojson  grid.geojson  zones.geojson
scripts/: backfill_2024.py  backfill_no1_no2_gap.py  verify_backfill.py
