[build-system]
requires = [ "poetry-core>=2.0.0,<3.0.0",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "day-ahead-prices"
version = "0.1.0"
description = "European day-ahead (and later intraday) electricity price scrapers into a shared Postgres table."
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "==3.12.9"
pandas = "~=2.2.0"
sqlalchemy = "~=2.0.0"
psycopg2 = "~=2.9.0"
requests = "~=2.32.0"
paramiko = "~=3.5.0"
xmltodict = "~=0.14.0"
zeep = "~=4.3.0"
prefect = "3.4.14"
importlib-metadata = ">=4.4"
fastapi = "~=0.115.6"
pytz = "~=2025.2"
lxml = "~=5.4.0"
openpyxl = "~=3.1.0"
python-dateutil = "~=2.9.0"
streamlit = "~=1.43.0"

[tool.poetry.dependencies.quent_core]
git = "https://github.com/peter-quent/Core.git"
rev = "v1.0.161-seb-database-functions"
